[package]
name = "uievents-code"
version = "0.1.3"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv/issues/244
description = "Constants for the `KeyboardEvent.code` property."
documentation = "https://docs.rs/uievents-code"
readme = "README.md"
repository = "https://github.com/JohnScience/uievents-code"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["KeyboardEvent", "code", "keyboard"]
categories = ["wasm", "web-programming"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false

[dependencies]
strum_macros = { version = "0.24", optional = true }
strum = { version = "0.24", optional = true }

[features]
legacy = []
non_standard_intl = []
enum = ["strum_macros", "strum"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]